Fixed map 23 hour sizing & text overflow.

--- a/src/style/_map.scss
+++ b/src/style/_map.scss
@@ -1,7 +1,7 @@
 .map {
   display:grid;
   grid-template-columns: 40px repeat(auto-fit, minmax(20px, 1fr));
-  grid-template-rows: repeat(24, 20px);
+  grid-template-rows: repeat(25, 20px);
   grid-gap: 4px;
   justify-items:center;
   align-items:center;
@@ -55,6 +55,12 @@
 
 	font-size:70%;
 	font-weight:200;
+	
+	overflow: hidden;
+  }
+  .map-program:hover
+  {
+	  overflow: visible;
   }
 
   .map-program-active, .map-program-active + .map-program-split
@@ -77,11 +83,13 @@
 	  display:block;
 	  width:100%;
 	  height:100%;
+	  overflow: hidden;
   }
 
   .map-program .map-content
   {
 	  padding: 0.4em;
+	  
 	}
 
 	.map-tooltip-content {
